--- a/src/core/layout/layout.scss
+++ b/src/core/layout/layout.scss
@@ -1,6 +1,5 @@
 .#{$LAYOUT} {
-    display: flex;
-    flex-direction: column;
+    display: block;
     overflow: hidden;
 
     //
@@ -25,7 +24,7 @@
     //
 
     &--edges {
-        overflow: initial;
+        overflow: visible;
 
         .#{$ROW} {
             margin-left: 0rem;
