Add row* direction modifiers for column offset mutations.

--- a/src/core/column/column.scss
+++ b/src/core/column/column.scss
@@ -112,6 +112,8 @@
 
     @at-root {
         $flows: (
+            row: left,
+            row-reverse: right,
             column: top,
             column-reverse: bottom,
         );
