Fix column selection for row bottoms.

--- a/src/core/row/row.scss
+++ b/src/core/row/row.scss
@@ -44,7 +44,7 @@
     &--bottoms {
         margin-bottom: -$gutter-width;
 
-        .#{$COLUMN} {
+        > .#{$COLUMN} {
             padding-bottom: $gutter-width;
         }
     }
@@ -54,7 +54,7 @@
             &--#{$label}-bottoms {
                 margin-bottom: -$gutter-width;
 
-                .#{$COLUMN} {
+                > .#{$COLUMN} {
                     padding-bottom: $gutter-width;
                 }
             }
