Adds common modifier aggregates for Layout, Row and Column.

--- a/src/core/quicks.scss
+++ b/src/core/quicks.scss
@@ -4,7 +4,7 @@
     @extend .#{$LAYOUT}--edges;
 }
 
-.util-#{to_lower_case($layout_identifier)}-common {
+.util-#{to_lower_case($layout_identifier)}-common, .#{$LAYOUT}--common {
     @extend .#{$LAYOUT}--solid;
     @extend .#{$LAYOUT}--edges;
 }
@@ -16,7 +16,7 @@
     @extend .#{$ROW}--breaks;
 }
 
-.util-#{to_lower_case($row_identifier)}-common {
+.util-#{to_lower_case($row_identifier)}-common, .#{$ROW}--common {
     @extend .#{$ROW}--bottoms;
     @extend .#{$ROW}--gutters;
     @extend .#{$ROW}--breaks;
@@ -27,6 +27,6 @@
     @extend .#{$COLUMN}--visible;
 }
 
-.util-#{to_lower_case($column_identifier)}-common {
+.util-#{to_lower_case($column_identifier)}-common, .#{$COLUMN}--common {
     @extend .#{$COLUMN}--visible;
 }
