Sets up branch with base v9 system.

--- a/src/core/index.scss
+++ b/src/core/index.scss
@@ -1,5 +1,4 @@
-@import 'layout/index.scss';
-@import 'row/index.scss';
-@import 'column/index.scss';
-@import 'quicks.scss';
-@import 'debug.scss';
+@import 'variables';
+@import 'helpers';
+@import 'row';
+@import 'column'
