--- a/bin/zeus.css
+++ b/bin/zeus.css
@@ -14,44 +14,28 @@ body {
   font-size: 16px; }
 
 .Container {
+  padding: 0 15px;
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  flex-direction: row-reverse; }
 
-@media (min-width: 0px) and (max-width: 767px) {
-  .Panel {
+@media (min-width: 0px) {
+  .Panel--a {
     flex-shrink: 0;
     flex-grow: 0;
-    flex-basis: calc(100% - (30px - (30px / 1)));
-    width: calc(100% - (30px - (30px / 1)));
-    max-width: calc(100% - (30px - (30px / 1)));
-    margin-right: 30px; }
-    .Panel:nth-child(1n+1) {
-      margin-right: 0; }
-    .Panel:nth-child(n+2) {
-      margin-top: 30px; } }
+    flex-basis: calc(66.66667% - (30px - (30px / 2)));
+    width: calc(66.66667% - (30px - (30px / 2)));
+    max-width: calc(66.66667% - (30px - (30px / 2))); } }
 
-@media (min-width: 768px) and (max-width: 1199px) {
-  .Panel {
+@media (min-width: 0px) {
+  .Panel--b {
     flex-shrink: 0;
     flex-grow: 0;
-    flex-basis: calc(50% - (30px - (30px / 2)));
-    width: calc(50% - (30px - (30px / 2)));
-    max-width: calc(50% - (30px - (30px / 2)));
+    flex-basis: calc(33.33333% - (30px - (30px / 2)));
+    width: calc(33.33333% - (30px - (30px / 2)));
+    max-width: calc(33.33333% - (30px - (30px / 2)));
     margin-right: 30px; }
-    .Panel:nth-child(2n+2) {
+    .Panel--b:nth-child(3n+3) {
       margin-right: 0; }
-    .Panel:nth-child(n+3) {
-      margin-top: 30px; } }
-
-@media (min-width: 1200px) {
-  .Panel {
-    flex-shrink: 0;
-    flex-grow: 0;
-    flex-basis: calc(33.33333% - (30px - (30px / 3)));
-    width: calc(33.33333% - (30px - (30px / 3)));
-    max-width: calc(33.33333% - (30px - (30px / 3)));
-    margin-right: 30px; }
-    .Panel:nth-child(3n+3) {
-      margin-right: 0; }
-    .Panel:nth-child(n+4) {
+    .Panel--b:nth-child(n+4) {
       margin-top: 30px; } }
