--- a/test.scss
+++ b/test.scss
@@ -1,13 +1,19 @@
 @import 'src/zeus';
 
 .Container {
+    @include layout-fluid();
     @include row();
+    @include row-reverse();
 }
 
-.Panel {
+.Panel--a {
     @include column((
-        true, true, xs, 1, 1,
-        true, true, md, 1, 2,
-        true, true, xl, 1, 3,
+        false, false, xs, 2, 3, 2,
+    ));
+}
+
+.Panel--b {
+    @include column((
+        true, true, xs, 1, 3, 2,
     ));
 }
