--- a/test.scss
+++ b/test.scss
@@ -1,19 +1,49 @@
 @import 'src/zeus';
 
 .Container {
-    @include layout-fluid();
+    @include layout();
     @include row();
-    @include row-reverse();
+    @include row-break();
 }
 
-.Panel--a {
+.Panel-a {
     @include column((
-        false, false, xs, 2, 3, 2,
+        true, true, xs, 1, 1, 1,
     ));
 }
 
-.Panel--b {
+.Panel-b {
     @include column((
-        true, true, xs, 1, 3, 2,
+        true, true, xs, 1, 2, 2,
+    ));
+}
+
+.Panel-c {
+    @include column((
+        true, true, xs, 1, 4, 4,
+    ));
+}
+
+.Panel-d {
+    @include column((
+        true, true, xs, 1, 6, 6,
+    ));
+}
+
+.Panel-e {
+    @include column((
+        true, true, xs, 1, 8, 8,
+    ));
+}
+
+.Panel-f {
+    @include column((
+        true, true, xs, 1, 10, 10,
+    ));
+}
+
+.Panel-g {
+    @include column((
+        true, true, xs, 1, 12, 12,
     ));
 }
