Fix for issue #4 - Removes .scss affix off imports

--- a/src/core/index.scss
+++ b/src/core/index.scss
@@ -1,5 +1,5 @@
-@import 'layout/index.scss';
-@import 'row/index.scss';
-@import 'column/index.scss';
-@import 'quicks.scss';
-@import 'debug.scss';
+@import 'layout/index';
+@import 'row/index';
+@import 'column/index';
+@import 'quicks';
+@import 'debug';
