--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -24,6 +24,6 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-@import 'skeleton.scss';
-@import 'common/index.scss';
-@import 'core/index.scss';
+@import 'skeleton';
+@import 'common/index';
+@import 'core/index';
